@startuml
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "API Layer" {
  class BidController
  class ApiErrorHandler
  class EngineAuthFilter
  class InFlightLimitFilter
  class RequestLoggingFilter
}

package "Normalization Layer" {
  interface BidRequestNormalizer
  class DefaultBidRequestNormalizer
  class NormalizedBidRequest
}

package "Rules Layer" {
  interface RulesEvaluator
  class DefaultRulesEvaluator
  class RulesProperties
  class RulesResult
}

package "Service Orchestration Layer" {
  interface BidService
  class DefaultBidService
  class BidServiceProperties
}

package "Adapter Layer" {
  class AdapterRegistry
  class AdapterProperties
  interface BidderAdapter
  class SimulatorAdapter
  class SimulatorHttpAdapter
  class AbstractHttpAdapter
  class HttpBidderClient
  class WebClientBidderClient
  class AdapterResult
}

package "Response Merger Layer" {
  interface ResponseMerger
  class DefaultResponseMerger
}

package "Observability" {
  class MetricsCollector
  class RequestOutcome
}

BidController --> BidRequestNormalizer
BidController --> BidService
BidController ..> RequestOutcome
ApiErrorHandler ..> MetricsCollector
ApiErrorHandler ..> RequestOutcome

BidRequestNormalizer <|.. DefaultBidRequestNormalizer
DefaultBidRequestNormalizer --> NormalizedBidRequest

BidService <|.. DefaultBidService
DefaultBidService --> AdapterRegistry
DefaultBidService --> RulesEvaluator
DefaultBidService --> ResponseMerger
DefaultBidService --> MetricsCollector
DefaultBidService --> BidServiceProperties

RulesEvaluator <|.. DefaultRulesEvaluator
DefaultRulesEvaluator --> RulesProperties
DefaultRulesEvaluator --> RulesResult

AdapterRegistry --> BidderAdapter
AdapterRegistry --> AdapterProperties
BidderAdapter <|.. SimulatorAdapter
BidderAdapter <|.. AbstractHttpAdapter
AbstractHttpAdapter <|-- SimulatorHttpAdapter
AbstractHttpAdapter --> HttpBidderClient
HttpBidderClient <|.. WebClientBidderClient
BidderAdapter --> AdapterResult

ResponseMerger <|.. DefaultResponseMerger
DefaultResponseMerger --> AdapterResult

RequestLoggingFilter ..> MetricsCollector
InFlightLimitFilter ..> MetricsCollector
@enduml
